--- a/src/style.css
+++ b/src/style.css
@@ -70,13 +70,15 @@ body {
         display: flex;
         flex-direction: column;
         gap: 25px;
-        font-family: Lexend, sans-serif;
+
         li {
           p {
             font-size: 2.2rem;
             color: var(--color-main-heading-stats);
+            font-weight: 400;
           }
           h3 {
+            font-family: Lexend, sans-serif;
             text-transform: uppercase;
             font-size: 1.3rem;
           }
